--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@ dependencies: [
 
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ,RevealPointer,RevealMath.MathJax3, RevealMath.KaTeX ],
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ,RevealPointer,RevealMath.MathJax3],
 
 
 			});
