--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+		<link rel="stylesheet" href="reveal.js/dist/reset.css">
+		<link rel="stylesheet" href="reveal.js/dist/reveal.css">
+		<link rel="stylesheet" href="reveal.js/dist/theme/black.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">		
@@ -713,15 +713,15 @@ $$\lim_{x\to a}h(x)=\lim_{x\to a}g(x)=L \implies \lim_{x\to a}f(x)=L$$
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/zoom/zoom.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/search/search.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script src="plugin/pointer/pointer.js"></script>
-		<link rel="stylesheet" href="plugin/pointer/pointer.css" />
-		<script src="plugin/math/math.js"></script>
+		<script src="reveal.js/dist/reveal.js"></script>
+		<script src="reveal.js/plugin/zoom/zoom.js"></script>
+		<script src="reveal.js/plugin/notes/notes.js"></script>
+		<script src="reveal.js/plugin/search/search.js"></script>
+		<script src="reveal.js/plugin/markdown/markdown.js"></script>
+		<script src="reveal.js/plugin/highlight/highlight.js"></script>
+		<script src="reveal.js/plugin/pointer/pointer.js"></script>
+		<link rel="stylesheet" href="reveal.js/plugin/pointer/pointer.css" />
+		<script src="reveal.js/plugin/math/math.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
@@ -766,7 +766,7 @@ pointer: {
 
 
 dependencies: [
-		{ src: 'plugin/mouse-pointer/mouse-pointer.js', async: true }, 
+		{ src: 'reveal.js/plugin/mouse-pointer/mouse-pointer.js', async: true }, 
 	],
 
 
