--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="reveal.js/dist/theme/black.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">		
+		<link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css">		
 
 
 <style>
