--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!doctype html>
 <html lang="en">
 	<head>
-
-<meta charset="utf-8">
-
+		
+<meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 		<title>Limits</title> <link rel="icon" type="image/x-icon" href="calculus.ico">
 
 		<meta name="description" content="Limits">
 		<meta name="author" content="Mohamed Khaled Khalifa">
 
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="reveal.js/dist/reset.css">
 		<link rel="stylesheet" href="reveal.js/dist/reveal.css">
 		<link rel="stylesheet" href="reveal.js/dist/theme/black.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css">		
+		<link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css" id="highlight-theme">		
 
 
 <style>
