--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
 		<meta name="description" content="Limits">
 		<meta name="author" content="Mohamed Khaled Khalifa">
 
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
@@ -28,6 +23,13 @@
   <body>
     <div class="reveal">
       <div class="slides">
+
+<section>
+<h1> Limits </h1>
+</section>
+
+
+	      
         <section
           data-markdown
           data-separator="-----"
