--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         hash: true,
 
         // Learn about plugins: https://revealjs.com/plugins/
-        plugins: [RevealMarkdown, RevealHighlight, RevealNotes, RevealZoom],
+        plugins: [RevealMarkdown, RevealHighlight, RevealNotes, RevealZoom,RevealPointer,RevealMath.MathJax3],
       });
     </script>
   </body>
