--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ $$x+y=z$$
         hash: true,
 
         // Learn about plugins: https://revealjs.com/plugins/
-        plugins: [RevealMarkdown, RevealHighlight, RevealNotes, RevealZoom,RevealPointer,RevealMath.MathJax3],
+        plugins: [RevealMarkdown, RevealHighlight, RevealNotes, RevealZoom,RevealPointer,RevealMath.KaTeX],
       });
     </script>
   </body>
