--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ $$x+y=z$$
     <script src="reveal.js/plugin/highlight/highlight.js"></script>
     <script src="reveal.js/plugin/zoom/zoom.js"></script>
     <script src="reveal.js/plugin/math/mathjax3.js"></script>
+    <script src="reveal.js/plugin/math/katex.js"></script>
     <script>
       // More info about initialization & config:
       // - https://revealjs.com/initialization/
@@ -72,7 +73,7 @@ $$x+y=z$$
         hash: true,
 
         // Learn about plugins: https://revealjs.com/plugins/
-        plugins: [RevealMarkdown, RevealHighlight, RevealNotes, RevealZoom,RevealPointer,RevealMath.MathJax3],
+        plugins: [RevealMarkdown, RevealHighlight, RevealNotes, RevealZoom,RevealPointer,RevealMath.MathJax3,RevealMath.KaTeX],
       });
     </script>
   </body>
