--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="reveal.js/css/reveal.css"/>
-  <link rel="stylesheet" href="reveal.js/css/theme/simple.css" id="theme">
+  <link rel="stylesheet" href="reveal.js/css/theme/source/simple.css" id="theme">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -172,7 +172,6 @@
         <!-- ################################################### -->
         <!-- ################################################### -->
         <!-- ################################################### -->
-        <script src="reveal.js/lib/js/head.min.js"></script>
         <script src="reveal.js/js/reveal.js"></script>
         <script>
         // Full list of configuration options available here:
@@ -190,8 +189,7 @@
 
           //// Optional libraries used to extend on reveal.js
           dependencies: [
-            // { src: 'reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-            // { src: 'reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+           // { src: 'reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
             { src: 'reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; }},
             { src: 'reveal.js/plugin/math/math.js', async: true }
           ]
